--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=parade
 
 # H2 Database
-spring.datasource.url=jdbc:h2:mem:concert
+spring.datasource.url=jdbc:h2:file:./data/data
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
