--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,6 +12,7 @@ spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
 # Redis
 spring.data.redis.host=localhost
