--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.h2database:h2'
+//    implementation 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     implementation 'org.redisson:redisson-spring-boot-starter:3.23.5'
-    implementation 'io.github.tobi-laa:spring-boot-embedded-redis:1.0.1' // embedded redis
+//    implementation 'io.github.tobi-laa:spring-boot-embedded-redis:1.0.1' // embedded redis
     implementation 'org.springframework.kafka:spring-kafka'
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
     implementation 'mysql:mysql-connector-java:8.0.33'
