--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,23 @@
 spring.application.name=parade
 
-# H2 Database
-spring.datasource.url=jdbc:h2:file:./data/data
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# MySQL Database
+spring.datasource.url=jdbc:mysql://localhost:3308/parade_db
+spring.datasource.username=parade_user
+spring.datasource.password=parade_pass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
 # Redis
 spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.redis.port=6380
 
 # Kafka
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=localhost:9093
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
