--- a/test/grafana-provisioning/datasources/prometheus.yml
+++ b/test/grafana-provisioning/datasources/prometheus.yml
@@ -5,3 +5,10 @@ datasources:
     type: prometheus
     access: proxy
     url: http://prometheus:9090
+    isDefault: false
+
+  - name: PrometheusCadvisor
+    type: prometheus
+    access: proxy
+    url: http://prometheus-cadvisor:9090
+    isDefault: false
