test 프로메테우스 업데이트 주기 변경

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     environment:
       - K6_PROMETHEUS_RW_SERVER_URL=http://prometheus:9090/api/v1/write
       - K6_PROMETHEUS_RW_TREND_AS_NATIVE_HISTOGRAM=true
+      - K6_PROMETHEUS_RW_PUSH_INTERVAL=1s
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
